<resources>
    <string name="app_name">GIFTO</string>
    <string name="obs1_text">Gifts Made Easy!</string>
    <string name="obs1_des">From fresh flowers and delicious cakes to heartfelt cards and premium chocolates—shop the best gifts all in one place.</string>
    <string name="nextButton">Next</string>
    <string name="skip">Skip</string>
    <string name="obs2_text"><![CDATA[Fast & Reliable Delivery]]></string>
    <string name="obs2_des">Choose the perfect gift, set a delivery time, and we’ll bring joy right to their door-on time, every time.</string>
    <string name="obs3_text">Ready to Make Someone’s Day?</string>
    <string name="gsButton">Get Started</string>
    <string name="signIn">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signUp">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rose">Rose Bouquet</string>
    <string name="DelightChocolate">Delight Chocolate</string>
    <string name="BirthdayCard">Birthday Card</string>
    <string name="ChocolateBox">Chocolate Box</string>
    <string name="Catego">Categories</string>
    <string name="more">More Products</string>
    <string name="cards">Cards</string>
    <string name="Store">Store</string>
    <string name="Buy">Buy</string>
    <string name="goBackHome">Go Back Home</string>
    <string name="ProceedToCheckout">Proceed to Checkout</string>
    <string name="myName">Imeth Methsuka</string>
    <string name="myEmail">Imethsuka@gmail.com</string>
    <string name="your_cart">Your Cart</string>
    <string name="lkr_3_200_00">LKR 3,200.00</string>
    <string name="lkr_5_500_00">LKR 5,500.00</string>
    <string name="subtotal">Subtotal</string>
    <string name="lkr_8_700_00">LKR 8,700.00</string>
    <string name="delivery">Delivery</string>
    <string name="lkr_300_00">LKR 300.00</string>
    <string name="lkr_9_000_00">LKR 9,000.00</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="proceed_to_payment">PROCEED TO PAYMENT</string>
    <string name="flowers">Flowers</string>
    <string name="cakes">Cakes</string>
    <string name="chocos">Chocos</string>
    <string name="trending">Trending</string>
    <string name="buy">Buy</string>
    <string name="chocolate_gateau">Chocolate Gateau</string>
</resources>